--- a/F1_RTOS_C_PLUS_PLUS.ioc
+++ b/F1_RTOS_C_PLUS_PLUS.ioc
@@ -59,6 +59,7 @@ Mcu.Pin14=PA14
 Mcu.Pin15=VP_FREERTOS_VS_CMSIS_V1
 Mcu.Pin16=VP_SYS_VS_tim4
 Mcu.Pin17=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin18=VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.3.0_1.3.0
 Mcu.Pin2=PA2
 Mcu.Pin3=PA3
 Mcu.Pin4=PA5
@@ -67,8 +68,9 @@ Mcu.Pin6=PA7
 Mcu.Pin7=PB10
 Mcu.Pin8=PB11
 Mcu.Pin9=PA9
-Mcu.PinsNb=18
-Mcu.ThirdPartyNb=0
+Mcu.PinsNb=19
+Mcu.ThirdParty0=STMicroelectronics.X-CUBE-ALGOBUILD.1.3.0
+Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
 MxCube.Version=6.9.1
@@ -188,6 +190,10 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+STMicroelectronics.X-CUBE-ALGOBUILD.1.3.0.DSPOoLibraryJjLibrary_Checked=true
+STMicroelectronics.X-CUBE-ALGOBUILD.1.3.0.IPParameters=LibraryCcDSPOoLibraryJjDSPOoLibrary
+STMicroelectronics.X-CUBE-ALGOBUILD.1.3.0.LibraryCcDSPOoLibraryJjDSPOoLibrary=true
+STMicroelectronics.X-CUBE-ALGOBUILD.1.3.0_SwParameter=LibraryCcDSPOoLibraryJjDSPOoLibrary\:true;
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USART2.IPParameters=VirtualMode
@@ -198,6 +204,8 @@ USART3.VirtualMode=VM_ASYNC
 USART3.WordLength=WORDLENGTH_9B
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
+VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.3.0_1.3.0.Mode=DSPOoLibraryJjLibrary
+VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.3.0_1.3.0.Signal=STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.3.0_1.3.0
 VP_SYS_VS_tim4.Mode=TIM4
 VP_SYS_VS_tim4.Signal=SYS_VS_tim4
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
